Start page (first version)

--- a/index.css
+++ b/index.css
@@ -32,4 +32,6 @@ button {
   justify-content: center;
   cursor: pointer;
   background: linear-gradient(#121213, #121213), linear-gradient(#121213 50%, rgba(18, 18, 19, 0.6) 80%, rgba(18, 18, 19, 0)), linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
+  background-origin: border-box;
+  bac
 }
