--- a/index.css
+++ b/index.css
@@ -11,7 +11,8 @@
 }
 
 body {
-  background-color: #141516;
+  background-color: rgb(255, 255, 255);
+  background-image: url(https://img.freepik.com/free-photo/rendering-abstract-futuristic-background-with-glowing-neon-blue-orange-lights_181624-19807.jpg);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,5 +34,35 @@ button {
   cursor: pointer;
   background: linear-gradient(#121213, #121213), linear-gradient(#121213 50%, rgba(18, 18, 19, 0.6) 80%, rgba(18, 18, 19, 0)), linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
   background-origin: border-box;
-  bac
+  background-clip: padding-box, border-box, border-box;
+  background-size: 200%;
+  animation: animate 2s infinite linear;
+}
+button::before {
+  content: '';
+  background: linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
+  height: 30%;
+  width: 60%;
+  position: absolute;
+  bottom: -20%;
+  z-index: -5;
+  background-size: 200%;
+  animation: animate 2s infinite linear;
+  filter: blur(calc(0.8 * var(--m)));
+}
+
+button:hover, button:hover::before  {
+animation: animate 0.5s infinite linear;
+}
+
+@keyframes animate {
+  0% {background-position: 0;}
+  100% {background-position: 200%;}
+}
+
+
+@media screen and (max-width: 1000px) {
+  :root {
+    --m: 2rem;
+  }
 }
