--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
 body {
   background-color: rgb(255, 255, 255);
   background-image: url(https://img.freepik.com/free-photo/rendering-abstract-futuristic-background-with-glowing-neon-blue-orange-lights_181624-19807.jpg);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,3 +67,23 @@ animation: animate 0.5s infinite linear;
     --m: 2rem;
   }
 }
+
+
+
+  body {
+    text-align:center;
+    background-image: url(file:///Users/kuvambhatia/Downloads/Blue.png);
+    background-size: 20px;
+    background-position: top left;
+ }
+ #centeredpage {
+    width:922px;
+    margin:0 auto;
+    text-align:left;
+    position:relative;
+ }
+ #logo {
+    position:absolute;
+    top:0;
+    left:-10px;
+ }
