--- a/index.css
+++ b/index.css
@@ -1,89 +1,87 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 
-:root {
-  --m: 4rem;
-  --red: #ff6565;
-  --pink: #ff64f9;
-  --purple: #685fff;
-  --blue: #4d8aff;
-  --green: #58ff89;
-  --yellow: #ffee55;
-  --orange: #ff6d1b;
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-color: rgb(255, 255, 255);
-  background-image: url(https://img.freepik.com/free-photo/rendering-abstract-futuristic-background-with-glowing-neon-blue-orange-lights_181624-19807.jpg);
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url(Login\ background\ .jpg);
+    background-size: cover;
+    background-position: center;
+}
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
 }
 
-button {
-  border: calc(0.08 * var(--m)) solid transparent;
-  position: relative;
-  color: #f3f3f3;
-  font-family: 'space Grotesk';
-  font-size: var(--m);
-  border-radius: calc(0.7 * var(--m));
-  padding: calc(0.5 * var(--m)) calc(1 * var(--m));
-  display: flex;
-  justify-content: center;
-  cursor: pointer;
-  background: linear-gradient(#121213, #121213), linear-gradient(#121213 50%, rgba(18, 18, 19, 0.6) 80%, rgba(18, 18, 19, 0)), linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
-  background-origin: border-box;
-  background-clip: padding-box, border-box, border-box;
-  background-size: 200%;
-  animation: animate 2s infinite linear;
-}
-button::before {
-  content: '';
-  background: linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
-  height: 30%;
-  width: 60%;
-  position: absolute;
-  bottom: -20%;
-  z-index: -5;
-  background-size: 200%;
-  animation: animate 2s infinite linear;
-  filter: blur(calc(0.8 * var(--m)));
+.Logo {
+    font-size: 2em;
+    color: #fff;
+    user-select: none;
 }
 
-button:hover, button:hover::before  {
-animation: animate 0.5s infinite linear;
+.navigation a {
+    position: relative;
+    font-size: 1.1em;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
 }
 
-@keyframes animate {
-  0% {background-position: 0;}
-  100% {background-position: 200%;}
+.navigation a::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: #fff;
+    border-radius: 5px;
+    transform: scaleX(0);
+    transition: transform .5s;
+
 }
 
-
-@media screen and (max-width: 1000px) {
-  :root {
-    --m: 2rem;
-  }
+.navigation a:hover::after {
+    transform-origin: left;
+    transform: scaleX(1);
 }
 
 
+.navigation .btnlogin-popup {
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #fff;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: #fff;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+    }
 
-  body {
-    text-align:center;
-    background-image: url(file:///Users/kuvambhatia/Downloads/Blue.png);
-    background-size: 20px;
-    background-position: top left;
- }
- #centeredpage {
-    width:922px;
-    margin:0 auto;
-    text-align:left;
-    position:relative;
- }
- #logo {
-    position:absolute;
-    top:0;
-    left:-10px;
- }
+    .navigation .btnlogin-popup:hover {
+        background: #fff;
+        color: #162938;
+
+
+
+    }
