--- a/index.css
+++ b/index.css
@@ -1,17 +1,13 @@
-/* Base Styles */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-
 body {
   background-color: #0d1b2a;
   color: #e0e1dd;
 }
-
-/* Navbar */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -23,7 +19,6 @@ body {
   top: 0;
   z-index: 1000;
 }
-
 .logo a {
   color: #e0e1dd;
   font-size: 1.8rem;
@@ -32,20 +27,16 @@ body {
   text-decoration: none;
   transition: color 0.3s ease-in-out;
 }
-
 .logo a:hover {
   color: #5bc0be;
 }
-
 .nav-links {
   list-style: none;
   display: flex;
 }
-
 .nav-links li {
   margin-left: 25px;
 }
-
 .nav-links li a {
   color: #e0e1dd;
   font-size: 1.1rem;
@@ -53,7 +44,6 @@ body {
   padding: 8px 16px;
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
-
 .nav-links li a:hover {
   background-color: #0a9396;
   color: #000;
@@ -73,7 +63,7 @@ body {
   margin: 4px 0;
 }
 
-/* Hero Section */
+
 .hero {
   height: 100vh;
   background-image: url(index.jpg); 
@@ -99,9 +89,8 @@ body {
 }
 
 .hero h1 .highlight {
-  color: #3a506b; /* Highlight effect */
+  color: #3a506b; 
 }
-
 .hero p {
   font-size: 1.5rem;
   margin-bottom: 40px;
@@ -148,7 +137,6 @@ body {
   }
 }
 
-/* Animations */
 @keyframes textAppear {
   0% {
     opacity: 0;
